--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@types/uuid": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
